En esta versión se organizo se eliminaron facelets que no se estaban usando, tambien .jsf
Adicionalmente para que hubiera consistencia el nombrado de las paginas se cambiaron nombres de facelets y donde apuntaban los enlaces, se adicionaron estilos para que las visata se tuvieran semejanza con los prototipos.

Finalmente, usar el tipo de nombrado usado para que la aplicación sea consistente.

PS: es mas sencillo clonar nuevamente el proyecto porque los camobios fueron muchos, y para aceptarlos se demorarian mucho.

Esta seria pues la version que usariamos para el 2do Sprint

--- a/web/resources/css/TGU.css
+++ b/web/resources/css/TGU.css
@@ -18,7 +18,12 @@
     margin-top: 5px;
 }
 
-.barraacciones
-{
-  width: 100%;
+.menubarstyleClass {
+    width: 100%;
+    background-color: white; 
+    border-color: white;
+}
+.menubarstyleClass li {
+    background-color: whitesmoke; 
+    border-color: black;
 }
