SPRINT 3 -Limpiando el controlador TrabajoDeGradoController -Terminado asignacion de docentes y envio de correo a evaluadores -Modificando colores de la fachada.

--- a/web/resources/css/TGU.css
+++ b/web/resources/css/TGU.css
@@ -1,10 +1,18 @@
 .paneltrabajo
 {
     margin-top: 20px;
+    margin-left: 8px;
     width: 730px;
     float: left;
     font-size: 15px;
     color: darkslategray;
+    background: honeydew;
+    
+}
+
+body
+{
+    background: whitesmoke;
 }
 
 .tabladirector
@@ -17,6 +25,7 @@
 {
     float : left;
     margin-top: 20px;
+    background-color: azure;
 }
 
 .barraacciones
