SPRINT 3 -Añadiendo algo de diseño.

--- a/web/resources/css/TGU.css
+++ b/web/resources/css/TGU.css
@@ -1,12 +1,16 @@
 .paneltrabajo
 {
     margin-top: 20px;
-    margin-left: 8px;
+    margin-left: 6px;
     width: 730px;
     float: left;
     font-size: 15px;
     color: darkslategray;
     background: honeydew;
+    border: 4px solid #C8CDD6;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
     
 }
 
@@ -26,6 +30,10 @@ body
     float : left;
     margin-top: 20px;
     background-color: azure;
+    border: 4px solid #C8CDD6;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
 }
 
 .barraacciones
